Refactor UI elements for consistency and clarity; updated button and header labels to use "AI" instead of "OpenAI", improved CSS styles for better responsiveness and aesthetics, and adjusted layout properties for enhanced user experience.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="status">
           <span id="statusChip" class="chip">Idle</span>
-          <button id="explainBtn" class="ghost">Explain with OpenAI</button>
+          <button id="explainBtn" class="ghost">Explain with AI</button>
         </div>
       </header>
 
@@ -65,7 +65,7 @@
       </section>
 
       <section class="panel">
-        <h3>OpenAI Explanation</h3>
+        <h3>AI Explanation</h3>
         <p class="small">
          Click the button in the header to fetch a concise explanation.
         </p>
